Finished changes for Level 8 in Level 8 branch